# plasma-workspace

./: CMakeLists.txt  config-workspace.h.cmake
applets/batterymonitor/package/: metadata.desktop
appmenu/: appmenu.json
components/dialogs/: DesktopCSDSystemDialog.qml  DesktopSystemDialog.qml  MobileSystemDialog.qml  SystemDialog.qml  qmldir
components/dialogs/examples/: test.qml
components/dialogs/private/: AbstractSystemDialog.qml  MobileSystemDialogButton.qml
containmentactions/applauncher/: plasma-containmentactions-applauncher.json
containmentactions/contextmenu/: plasma-containmentactions-contextmenu.json
containmentactions/paste/: plasma-containmentactions-paste.json
containmentactions/switchactivity/: plasma-containmentactions-switchactivity.json
containmentactions/switchdesktop/: plasma-containmentactions-switchdesktop.json
containmentactions/switchwindow/: plasma-containmentactions-switchwindow.json
dataengines/activities/: plasma-dataengine-activities.json
dataengines/applicationjobs/: plasma-dataengine-applicationjobs.json
dataengines/apps/: plasma-dataengine-apps.json
dataengines/devicenotifications/: plasma-dataengine-devicenotifications.json
dataengines/dict/: plasma-dataengine-dict.json
dataengines/executable/: plasma-dataengine-executable.json
dataengines/favicons/: plasma-dataengine-favicons.json
dataengines/filebrowser/: plasma-dataengine-filebrowser.json
dataengines/geolocation/: plasma-dataengine-geolocation.json  plasma-geolocation-gps.json  plasma-geolocation-ip.json
dataengines/hotplug/: plasma-dataengine-hotplug.json
dataengines/keystate/: plasma-dataengine-keystate.json
dataengines/mouse/: plasma-dataengine-mouse.json
dataengines/mpris2/: plasma-dataengine-mpris2.json
dataengines/notifications/: plasma-dataengine-notifications.json
dataengines/packagekit/: plasma-dataengine-packagekit.json
dataengines/places/: plasma-dataengine-places.json
dataengines/powermanagement/: plasma-dataengine-powermanagement.json
dataengines/soliddevice/: plasma-dataengine-soliddevice.json
dataengines/statusnotifieritem/: plasma-dataengine-statusnotifieritem.json
dataengines/systemmonitor/: plasma-dataengine-systemmonitor.json
dataengines/time/: plasma-dataengine-time.json
dataengines/weather/: plasma-dataengine-weather.json
freespacenotifier/: freespacenotifier.json
kcms/: CMakeLists.txt
kcms/autostart/: kcm_autostart.json
kcms/colors/: kcm_colors.json
kcms/cursortheme/: kcm_cursortheme.json
kcms/desktoptheme/: kcm_desktoptheme.json
kcms/feedback/: kcm_feedback.json
kcms/fonts/: kcm_fonts.desktop  kcm_fonts.json
kcms/formats/: CMakeLists.txt  exampleutility.cpp  kcm_formats.desktop  kcm_formats.json  kcmformats.cpp  kcmformats.h  languagelistmodel.cpp  localegenerator.cpp  localegenerator.h  localegenhelper.cpp  localegenhelper.h  optionsmodel.cpp  optionsmodel.h  org.kde.localegenhelper.service.in
kcms/formats/package/contents/ui/: LanguageSelectPage.qml  main.qml
kcms/icons/: kcm_icons.json
kcms/kfontinst/kcmfontinst/: fontinst.json
kcms/lookandfeel/: kcm_lookandfeel.json  lookandfeelmanager.cpp  lookandfeelmanager.h
kcms/nightcolor/: kcm_nightcolor.json
kcms/notifications/: kcm_notifications.json
kcms/region_language/: CMakeLists.txt  Messages.sh  exampleutility.cpp  formatssettings.kcfg  kcmformats.cpp  kcmformats.h  kcmregionandlang.cpp  kcmregionandlang.h  languagelistmodel.cpp  languagelistmodel.h  localegenerator.cpp  localegenhelper.cpp  localegenhelper.h  localelistmodel.cpp  localelistmodel.h  optionsmodel.cpp  optionsmodel.h  org.kde.localegenhelper.conf  org.kde.localegenhelper.policy  org.kde.localegenhelper.service.in  regionandlangsettings.kcfg  regionandlangsettings.kcfgc
kcms/region_language/package/contents/ui/: AdvancedLanguageSelectPage.qml  LanguageSelectPage.qml  main.qml
kcms/style/: kcm_style.json
kcms/translations/: kcm_translations.json
kioslave/desktop/: desktopnotifier.json
klipper/: clipboardjob.cpp  history.cpp  history.h  historyitem.cpp  historyitem.h  historymodel.cpp  historymodel.h  klipper.cpp  org.kde.plasma.clipboard.operations  plasma-dataengine-clipboard.json
ktimezoned/: ktimezoned.json
libcolorcorrect/kded/: colorcorrectlocationupdater.json
lookandfeel/: metadata.json
lookandfeel.dark/: metadata.json
lookandfeel.twilight/: metadata.json
runners/appstream/: plasma-runner-appstream.json
runners/bookmarks/: plasma-runner-bookmarks.json
runners/calculator/: plasma-runner-calculator.json
runners/kill/: plasma-runner-kill.json
runners/locations/: plasma-runner-locations.json
runners/places/: plasma-runner-places.json
runners/powerdevil/: plasma-runner-powerdevil.json
runners/recentdocuments/: plasma-runner-recentdocuments.json
runners/services/: plasma-runner-services.json
runners/sessions/: plasma-runner-sessions.json
runners/shell/: plasma-runner-shell.json
runners/webshortcuts/: plasma-runner-webshortcuts.json  webshortcutrunner.cpp
runners/windowedwidgets/: plasma-runner-windowedwidgets.json
shell/: panelview.cpp  panelview.h  shellcorona.cpp
solidautoeject/: solidautoeject.json
soliduiserver/: soliduiserver.json
statusnotifierwatcher/: statusnotifierwatcher.json
systemmonitor/: ksysguard.json
wallpapers/color/: metadata.json
(+27 files in other folders)
